# contract-review

./: loss_review.txt  main.py  prompt  动土和受限空间类.xlsx  审核结果.xlsx
ocr/: .dockerignore  README.md  gunicorn.conf.py  layout_main.py  main.py  pyproject.toml  requirements.txt  start.sh  stop.sh  test_layout.py  test_ocr_service.py  test_ocr_service_doc.py
ocr/api/: file_util.py  job.py  layout_job.py
ocr/model_config/: __init__.py  config.yaml
ocr/pdf_parser/configs/: layout.yaml  pdf2txt.yaml
ocr/pdf_parser/tasks/: __init__.py  base_task.py
ocr/pdf_parser/tasks/formula_rec/: pp_rec.py  task.py
ocr/pdf_parser/tasks/layout/: doclayout.py  task.py
ocr/pdf_parser/tasks/ocr/: paddle_ocr.py  task.py
ocr/pdf_parser/tasks/region_dec/: region_dectet.py  task.py
ocr/pdf_parser/tasks/table_rec/: pp_SLA_model.py  task.py
ocr/pdf_parser/tasks/unstructed/: layout_objects.py  unstructed_parser.py  utils.py
ocr/pdf_parser/tasks/unstructed/xycut_enhanced/: __init__.py  utils.py  xycuts.py
ocr/pdf_parser/text_spliter/: character_text_spliter.py
ocr/pdf_parser/utils/: config_loader.py  merge.py  minio_helper.py  reader.py  visualization.py
ocr/pdf_parser/utils/batch_sampler/: __init__.py  base_batch_sampler.py  image_batch_sampler.py
ocr/tasks/: layout.py  pdf2txt.py
review/: requirements
review/agent/: __init__.py  agent.py  parallel_doc_qa.py  parallel_doc_qa_member.py
review/configs/: __init__.py  config.yaml
review/llm/: __init__.py  base.py  oai.py  qwenvl_oai.py  schema.py
review/tasks/: review.py
test_pdf/: 动土作业票_result.json
(+5 files in other folders)
