[project]
name = "ocr"
version = "0.1.0"
description = "OCR Service"
readme = "README.md"
requires-python = "==3.11.*"
# 方便Mac开发，与requirements.txt不同
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-compress>=1.13",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "langchain==0.3.0",
    "paddlepaddle==3.3.0",
    "paddlex[ocr]==3.2.1",
    "pypdfium2>=4.30.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
]

[tool.uv]
package = false
required-environments = ["sys_platform == 'darwin'"]
constraint-dependencies = []

[[tool.uv.index]]
name = "bfsu.edu.cn"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/nightly/cpu/"
explicit = true

[tool.uv.sources]
paddlepaddle = { index = "paddle" }
